<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="IDS_IDLE_POP_UNABLE_TO_OPEN_PS_TAP_SETTINGS_GO_TO_APP_INFO_PERMISSIONS_THEN_ALLOW_MSG">Unable to open %s. Tap SETTINGS, then allow the following permissions and try again:</string>
    <string name="IDS_IDLE_POP_UNABLE_TO_USE_PS_TAP_SETTINGS_GO_TO_APP_INFO_PERMISSIONS_MSG">Unable to use %s. Tap SETTINGS, go to App info > Permissions, then allow the following permissions and try again:</string>
    <string name="Import">Import</string>
    <string name="Unable_to_create_group_description">The maximum number of groups that can be joined or created (%d) has been reached. Leave or delete a group, then try again.</string>
    <string name="Unable_to_join_group">Unable to join group</string>
    <string name="Unable_to_join_group_description">The maximum number of groups that can be joined (%d) has been reached. You will no longer be able to receive Event sharing requests. To continue receiving them, leave a group.</string>
    <string name="Unable_to_share_event">Unable to share story</string>
    <string name="a_event_will_be_deleted">1 story will be deleted.</string>
    <string name="a_event_will_be_removed">1 event will be removed.</string>
    <string name="a_invalid_contact_number">"This contact doesn't have a valid phone number. Select only contacts with valid phone numbers."</string>
    <string name="a_invalid_phone_number">1 contact has an invalid phone number.</string>
    <string name="a_item_uploaded">1 item uploaded.</string>
    <string name="a_member_added">1 member added.</string>
    <string name="a_network_or_server_error_has_occurred">A network or server error has occurred.</string>
    <string name="a_shared_event_will_be_deleted">1 story will be deleted. You will no longer be able to share images and videos with the group related to this story.</string>
    <string name="a_shared_story_will_be_deleted">"1 of the selected stories is shared. If you delete shared stories, you'll no longer be able to see images and videos added to the story by others."</string>
    <string name="a_story_will_be_deleted">Delete story?</string>
    <string name="a_verification_code_will_be_sent">A verification code will be sent to the number below.</string>
    <string name="about">About %s</string>
    <string name="accumulated_time">Accumulated time</string>
    <string name="acs">Voice call</string>
    <string name="action_bar_text_label">%1$s (%2$d)</string>
    <string name="activities">Activities</string>
    <string name="activity_not_found">No apps available to complete this action.</string>
    <string name="actual_ratio">Actual ratio</string>
    <string name="add">Add</string>
    <string name="add_all">Add all</string>
    <string name="add_comment_fail_msg">"Couldn't add comment."</string>
    <string name="add_content">Add content</string>
    <string name="add_friends">Add</string>
    <string name="add_location">Add location</string>
    <string name="add_shortcut">Add to Home screen</string>
    <string name="add_tag">Add tag</string>
    <string name="add_to">Add to</string>
    <string name="add_to_event">Add to story</string>
    <string name="agree">Agree</string>
    <string name="agree_to_all">Agree to all</string>
    <string name="airplanes">Airplanes</string>
    <string name="airview_expand">Expand</string>
    <string name="album">Album</string>
    <string name="album_name_already_in_use">Album name already in use.</string>
    <string name="album_name_images">Images</string>
    <string name="album_number"> (%1$d)</string>
    <string name="alert">Alert</string>
    <string name="alert_msg_invalid_name">Contact must be named</string>
    <string name="alibaba">Samsung Cloud</string>
    <string name="all">All</string>
    <string name="all_current_albums_are_private">All your current albums are in Private. Create a new album and try again.</string>
    <string name="allshare_disconnect_popup">Disconnected to %s. Check network status and connected device</string>
    <string name="allshare_nearby_devices">Nearby devices</string>
    <string name="allshare_nearby_devices_found">Nearby devices found</string>
    <string name="allshare_nearby_my_device">My device</string>
    <string name="allshare_player_is_not_available">Player is not available. Check the network status and connected device</string>
    <string name="allshare_select_playback_device">View content on</string>
    <string name="allshare_unable_scan_device">Unable to scan for devices</string>
    <string name="allshare_unable_scan_device_while_group_play">Unable to change player while Group Play is running.</string>
    <string name="already_exists">File name already exists.</string>
    <string name="animals">Animals</string>
    <string name="animated_gif">Animated GIF</string>
    <string name="animated_gif_maker_video_file_not_supported">"Can't use videos to create an animated GIF. Videos deselected."</string>
    <string name="animated_photo">Animated photo</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Gallery</string>
    <string name="application_not_found">Application not found</string>
    <string name="apply_to_all_items">Apply to all items</string>
    <string name="appwidget_empty_text">No photos.</string>
    <string name="architecture">Architecture</string>
    <string name="assign_name">Assign name</string>
    <string name="auto">Auto</string>
    <string name="auto_adjust">Auto adjust</string>
    <string name="auto_adjust_abb">Auto adjust</string>
    <string name="auto_create_event">Auto create stories</string>
    <string name="auto_create_event_description">Create stories automatically based on the faces, times, and locations of pictures and videos.</string>
    <string name="auto_sync_disabled">Auto sync disabled</string>
    <string name="available_devices">Available devices</string>
    <string name="available_uses">Available uses</string>
    <string name="bags">Bags</string>
    <string name="barcode">Barcode</string>
    <string name="beach">Beach</string>
    <string name="best_face">Best face</string>
    <string name="best_photo">Best photo</string>
    <string name="bikes">Bikes</string>
    <string name="bixby_all">Contents</string>
    <string name="blurred_pictures">Blurry pictures</string>
    <string name="cancel">Cancel</string>
    <string name="cloud_sync">Cloud sync</string>
    <string name="cloud_view">Cloud view</string>
    <string name="contact_us">Contact us</string>
    <string name="contextual_goto_url">Go to URL</string>
    <string name="copy_to_album">Copy to album</string>
    <string name="create_agif">Animate</string>
    <string name="create_event">Create story</string>
    <string name="delete_album">Delete album</string>
    <string name="details">Details</string>
    <string name="display_date_and_location">Show date and location tags</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="enable_split">Split view</string>
    <string name="event_settings">Story settings</string>
    <string name="favorite">Favourite</string>
    <string name="filter_by">Filter by</string>
    <string name="gallery_settings">Gallery settings</string>
    <string name="gif_maker">Create AGIF file</string>
    <string name="help">Help</string>
    <string name="hide">HIDE</string>
    <string name="hide_albums">Hide albums</string>
    <string name="home">Home</string>
    <string name="image_analysis">Image analysis</string>
    <string name="image_analysis_description">For enhanced search, image synced with Samsung Cloud will be analyzed based on the people, place, and things in them.</string>
    <string name="image_suggetions">Suggest pictures</string>
    <string name="image_suggetions_description">Receive suggestions of images you might want to add to each story.</string>
    <string name="images_and_videos_synced_with_cloud">View images and videos synced with Samsung Cloud.</string>
    <string name="more_options_setting">Settings</string>
    <string name="move_out_of_secure_folder">Move out of Secure Folder</string>
    <string name="move_to_album">Move to album</string>
    <string name="move_to_knox">Move to Knox</string>
    <string name="move_to_secretbox">Move to Private</string>
    <string name="move_to_secure_folder">Move to Secure Folder</string>
    <string name="new_album">Create album</string>
    <string name="printer">Print</string>
    <string name="product_search">Product search</string>
    <string name="properties">Properties</string>
    <string name="qrcodescan">Scan QR code or barcode</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="refresh">Refresh</string>
    <string name="related_image">Related image</string>
    <string name="remove_from_category">Remove from category</string>
    <string name="remove_from_event">Remove from story</string>
    <string name="remove_from_knox">Move to Personal mode</string>
    <string name="remove_from_secretbox">Remove from Private</string>
    <string name="rename">Rename</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="sa_collage">Collage</string>
    <string name="sa_rotate">Rotate</string>
    <string name="samsung_cloud_sync">Samsung Cloud sync</string>
    <string name="search">Search</string>
    <string name="send_to_other_devices">Send to another device</string>
    <string name="set_as_contact_picture">Set as contact picture</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="setting_advanced">Advanced</string>
    <string name="setting_general">General</string>
    <string name="setting_go_to_url_summary">Save web addresses from webpages in screenshots so you can visit again quickly.</string>
    <string name="settings_stories_category">Stories</string>
    <string name="share_event">Story sharing</string>
    <string name="share_notification">Notifications</string>
    <string name="share_short">Share</string>
    <string name="show">SHOW</string>
    <string name="show_hidden_albums">Show hidden albums</string>
    <string name="slideshow">Slideshow</string>
    <string name="sort_by_title">Sort by</string>
    <string name="ss_set_as_always_on_display_image_opt_abb">Set as Always On Display image</string>
    <string name="switch_to_camera">Camera</string>
    <string name="wechat_shot">WeChat Sight</string>
    <string name="verizon_cloud">Verizon Cloud</string>
    <string name="view_original">View original</string>
</resources>