<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/gallery_settings" android:key="setting_activity_top_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/samsung_cloud_sync" android:key="samsung_cloud_sync"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <com.sec.android.gallery3d.settings.AccountSettingSwitchPreference android:title="@string/cloud_sync" android:key="cloud_sync" android:defaultValue="false" />
        <SwitchPreference android:title="@string/image_analysis" android:key="image_analysis" android:summary="@string/image_analysis_description" android:defaultValue="false" />
        <Preference android:title="@string/cloud_view" android:key="cloud_view" android:summary="@string/images_and_videos_synced_with_cloud" />
        <Preference android:title="@string/recycle_bin" android:key="recycle_bin" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_stories_category" android:key="event_settings"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Preference android:title="@string/share_event" android:key="event_sharing" />
        <SwitchPreference android:title="@string/auto_create_event" android:key="auto_create_event" android:summary="@string/auto_create_event_description" android:defaultValue="true" />
        <SwitchPreference android:title="@string/image_suggetions" android:key="image_suggestions" android:summary="@string/image_suggetions_description" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_advanced" android:key="advanced_setting"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <SwitchPreference android:title="@string/contextual_goto_url" android:key="go_to_url" android:summary="@string/setting_go_to_url_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_general" android:key="about_gallery_page"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Preference android:title="@string/about" android:key="about_page" />
    </PreferenceCategory>
</PreferenceScreen>