<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/action_search" android:visible="false" android:title="@string/related_image" android:showAsAction="ifRoom" />
    <item android:id="@id/action_moreinfo" android:visible="false" android:title="@string/details" android:showAsAction="never" />
    <item android:id="@id/action_wechatsightalbum" android:visible="false" android:title="@string/wechat_shot" android:showAsAction="always" />
    <item android:id="@id/action_favorite" android:visible="true" android:title="@string/favorite" android:showAsAction="always" />
    <item android:id="@id/action_album" android:visible="false" android:title="@string/album" android:showAsAction="ifRoom" />
    <item android:id="@id/action_rotate_ccw" android:visible="false" android:title="@string/rotate_left" android:showAsAction="never" />
    <item android:id="@id/action_rotate_cw" android:visible="false" android:title="@string/rotate_right" android:showAsAction="never" />
    <item android:id="@id/action_download_via_cloud" android:visible="false" android:title="@string/download" android:showAsAction="never" />
    <item android:id="@id/action_slideshow" android:visible="false" android:title="@string/slideshow" android:showAsAction="never" />
    <item android:id="@id/action_move_to_secretbox" android:visible="false" android:title="@string/move_to_secretbox" android:showAsAction="never" />
    <item android:id="@id/action_remove_from_secretbox" android:visible="false" android:title="@string/remove_from_secretbox" android:showAsAction="never" />
    <item android:id="@id/action_move_to_knox" android:visible="false" android:title="@string/move_to_knox" android:showAsAction="never" />
    <item android:id="@id/action_remove_from_knox" android:visible="false" android:title="@string/remove_from_knox" android:showAsAction="never" />
    <item android:id="@id/action_move_to_secure_folder" android:visible="false" android:title="@string/move_to_secure_folder" android:showAsAction="never" />
    <item android:id="@id/action_remove_from_secure_folder" android:visible="false" android:title="@string/move_out_of_secure_folder" android:showAsAction="never" />
    <item android:id="@id/action_setas_contact" android:visible="true" android:title="@string/set_as_contact_picture" android:showAsAction="never" />
    <item android:id="@id/action_setas" android:visible="true" android:title="@string/set_as_wallpaper" android:showAsAction="never" />
    <item android:id="@id/set_always_on_display" android:visible="false" android:title="@string/ss_set_as_always_on_display_image_opt_abb" android:showAsAction="never" />
    <item android:id="@id/action_qrscan" android:visible="true" android:title="@string/qrcodescan" android:showAsAction="never" />
    <item android:id="@id/action_printer" android:visible="false" android:title="@string/printer" android:showAsAction="never" />
    <item android:id="@id/action_taobao" android:visible="false" android:title="@string/product_search" android:showAsAction="never" />
</menu>