<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/action_camera" android:title="@string/switch_to_camera" android:showAsAction="ifRoom" />
    <item android:id="@id/action_notification" android:visible="false" android:title="@string/share_notification" android:showAsAction="always" android:actionLayout="@layout/event_notification_badge" />
    <item android:id="@id/menu_vzcloud" android:visible="false" android:title="@string/verizon_cloud" android:showAsAction="never" />
    <item android:id="@id/action_nearby_device" android:visible="false" android:title="@string/allshare_nearby_devices" android:showAsAction="never" />
    <item android:id="@id/cancel_button" android:title="@string/cancel" android:showAsAction="ifRoom" />
    <item android:id="@id/action_search" android:visible="false" android:title="@string/search" android:showAsAction="always" />
    <item android:id="@id/action_create_event_album" android:visible="false" android:title="@string/create_event" android:showAsAction="never" />
    <item android:id="@id/album_view_new_album" android:visible="false" android:title="@string/new_album" android:showAsAction="never" />
    <item android:id="@id/action_home" android:visible="false" android:title="@string/home" android:showAsAction="never" />
    <item android:id="@id/action_refresh" android:visible="false" android:title="@string/refresh" android:showAsAction="never" />
    <item android:id="@id/action_filter_by" android:visible="false" android:title="@string/filter_by" android:showAsAction="never" />
    <item android:id="@id/action_settings" android:visible="false" android:title="@string/more_options_setting" android:showAsAction="never" />
    <item android:id="@id/action_event_settings" android:visible="false" android:title="@string/event_settings" android:showAsAction="never" />
    <item android:id="@id/action_show_hidden_album" android:visible="false" android:title="@string/show_hidden_albums" android:showAsAction="never" />
    <item android:id="@id/action_help" android:title="@string/help" android:showAsAction="never" />
    <item android:id="@id/action_contact_us" android:visible="false" android:title="@string/contact_us" android:showAsAction="never" />
</menu>