<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_camera" android:title="@string/switch_to_camera" android:showAsAction="ifRoom" />
    <item android:id="@id/action_notification" android:visible="false" android:title="@string/share_notification" android:showAsAction="always" android:actionLayout="@layout/event_notification_badge" />
    <item android:id="@id/action_select" android:visible="false" android:title="@string/edit" android:showAsAction="never" />
    <item android:id="@id/menu_vzcloud" android:visible="false" android:title="@string/verizon_cloud" android:showAsAction="never" />
    <item android:id="@id/action_share" android:visible="false" android:title="@string/share_short" android:showAsAction="never" />
    <item android:id="@id/action_search" android:visible="false" android:title="@string/search" android:showAsAction="always" />
    <item android:enabled="false" android:id="@id/action_gif_maker" android:visible="false" android:title="@string/gif_maker" android:showAsAction="never" />
    <item android:enabled="false" android:id="@id/action_gif_maker_MSG" android:visible="false" android:title="@string/create_agif" android:showAsAction="never" />
    <item android:enabled="false" android:id="@id/action_collage" android:visible="false" android:title="@string/sa_collage" android:showAsAction="never" />
    <item android:enabled="false" android:id="@id/action_slideshow" android:visible="false" android:title="@string/slideshow" app:showAsAction="never" />
    <item android:id="@id/action_nearby_device" android:visible="false" android:title="@string/allshare_nearby_devices" android:showAsAction="never" />
    <item android:id="@id/action_settings" android:visible="false" android:title="@string/more_options_setting" android:showAsAction="never" />
    <item android:id="@id/action_help" android:visible="false" android:title="@string/help" android:showAsAction="never" />
    <item android:id="@id/action_contact_us" android:visible="false" android:title="@string/contact_us" android:showAsAction="never" />
</menu>