<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/gallery_settings" android:key="setting_activity_top_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_stories_category" android:key="event_settings"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Preference android:title="@string/share_event" android:key="event_sharing" />
        <SwitchPreference android:title="@string/auto_create_event" android:key="auto_create_event" android:summary="@string/auto_create_event_description" android:defaultValue="true" />
        <SwitchPreference android:title="@string/image_suggetions" android:key="image_suggestions" android:summary="@string/image_suggetions_description" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_general" android:key="about_gallery_page"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Preference android:title="@string/about" android:key="about_page" />
    </PreferenceCategory>
</PreferenceScreen>